--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "url": "https://github.com/ysknk/node-package-utilities/issues"
   },
   "homepage": "https://github.com/ysknk/node-package-utilities#readme",
-  "devDependencies": {
+  "dependencies": {
     "find-up": "^6.3.0",
     "fs": "^0.0.1-security"
   }
